--- a/Inventory.yml
+++ b/Inventory.yml
@@ -1,6 +1,7 @@
 all:
   hosts:
-    app.glitztechs.com
-    db.glitztechs.com
+      host1:
+        ansible_host: app.glitztechs.com
+      host2: db.glitztechs.com 
   vars:
-  ansible_ssh_user: centos 
+    ansible_ssh_user: centos 
