--- a/mongo.yml
+++ b/mongo.yml
@@ -9,7 +9,7 @@
 
   - name: Installing MongoDB
     ansible.builtin.yum:
-      name: mongod
+      name: mongodb-org
       state: installed
 
   - name: Start & Enable MongoDB Service
