--- a/mongo.yml
+++ b/mongo.yml
@@ -20,6 +20,7 @@
 
   - name: Update listen address from 127.0.0.1 to 0.0.0.0 in /etc/mongod.conf
     ansible.builtin.replace:
+      path: /etc/mongod.conf
       regexp: '127.0.0.1'
       replace: '0.0.0.0'
 
