--- a/catalogue.yml
+++ b/catalogue.yml
@@ -71,7 +71,7 @@
       state: installed
 
   - name: load catalogue data
-    ansible.builtin.command: mongo --host mongodb.joindevops.online < /app/schema/catalogue.js
+    ansible.builtin.command: mongo --host mongodb.glitztechs.com < /app/schema/catalogue.js
 
   - name: restart catalogue
     ansible.builtin.service:
