--- a/roboshop.conf
+++ b/roboshop.conf
@@ -6,7 +6,7 @@ location /images/ {
 }
 location /api/catalogue/ { proxy_pass http://catalogue.glitztechs.com:8080/; }
 location /api/user/ { proxy_pass http://user.glitztechs.com:8080/; }
-location /api/cart/ { proxy_pass http://localhost:8080/; }
+location /api/cart/ { proxy_pass http://cart.glitztechs.com:8080/; }
 location /api/shipping/ { proxy_pass http://localhost:8080/; }
 location /api/payment/ { proxy_pass http://localhost:8080/; }
 
