--- a/roboshop.conf
+++ b/roboshop.conf
@@ -8,7 +8,7 @@ location /api/catalogue/ { proxy_pass http://catalogue.glitztechs.com:8080/; }
 location /api/user/ { proxy_pass http://user.glitztechs.com:8080/; }
 location /api/cart/ { proxy_pass http://cart.glitztechs.com:8080/; }
 location /api/shipping/ { proxy_pass http://shipping.glitztechs.com:8080/; }
-location /api/payment/ { proxy_pass http://localhost:8080/; }
+location /api/payment/ { proxy_pass http://payment.glitztechs.com:8080/; }
 
 location /health {
   stub_status on;
